# imphnen-backend-service

./: .dockerignore  .env.example  .envrc.example  .gitignore  Cargo.toml  Dockerfile  README.md  apply-env.cmd  apply-env.ps1  apply-env.sh  default.nix  deploy-test.sh  docker-compose.yml  docker.nix  flake.nix  init.sql  nixos-module.nix  run-all-tests.sh  run-tests.sh  rustfmt.toml  shell.nix  test-comprehensive-api.sh  test.sh  test_auth.rs
imphnen-backend/: Cargo.toml
imphnen-backend/src/: main.rs
imphnen-cms/: Cargo.toml
imphnen-cms/src/: lib.rs
imphnen-cms/src/events/: mod.rs
imphnen-cms/src/events/application/: event_service.rs  mod.rs
imphnen-cms/src/events/domain/: event.rs  mod.rs  repository.rs  service.rs
imphnen-cms/src/qr/: mod.rs
imphnen-cms/src/qr/campaigns/: mod.rs
imphnen-cms/src/qr/users/: mod.rs
imphnen-cms/src/roadmap/: mod.rs
imphnen-cms/src/testimonials/: mod.rs
imphnen-cms/src/v1/: mod.rs
imphnen-core-service/: Cargo.toml
imphnen-dimentorin/: Cargo.toml
imphnen-dimentorin/src/: lib.rs
imphnen-dimentorin/src/mentors/: mod.rs
imphnen-dimentorin/src/sessions/: mod.rs
imphnen-dimentorin/src/v1/: mod.rs
imphnen-dimentorin/src/v2/: mod.rs
imphnen-entities/: Cargo.toml
imphnen-entities/src/: audit_log.rs  common_dto.rs  error_dto.rs  lib.rs  permissions.rs  users.rs
imphnen-entities/src/permissions/: definitions.rs  mappings.rs  mod.rs
imphnen-entities/src/seaorm/: lib.rs  migration_status.rs  mod.rs
imphnen-gacha/: Cargo.toml
imphnen-gacha/src/: lib.rs
imphnen-gacha/src/gacha_claims/: mod.rs
imphnen-gacha/src/gacha_credits/: mod.rs
imphnen-gacha/src/gacha_items/: mod.rs
imphnen-gacha/src/gacha_rolls/: mod.rs
imphnen-gacha/src/v1/: mod.rs
imphnen-gateway/: Cargo.toml
imphnen-gateway/src/: docs.rs  lib.rs
imphnen-gateway/src/docs/: mod.rs  openapi.rs  security.rs
imphnen-hackathon/: Cargo.toml
imphnen-hackathon/src/: config.rs  lib.rs
imphnen-hackathon/src/admin/: mod.rs  routes.rs
imphnen-hackathon/src/auth/: mod.rs
imphnen-hackathon/src/certificates/: mod.rs  routes.rs
imphnen-hackathon/src/chat/: mod.rs
imphnen-hackathon/src/common/: cities.rs  hackathon_jwt.rs  mod.rs  supabase_client.rs
imphnen-hackathon/src/invitations/: mod.rs
imphnen-hackathon/src/join_requests/: mod.rs
imphnen-hackathon/src/middleware/: admin_only.rs  hackathon_auth.rs  mod.rs
imphnen-hackathon/src/storage/: mod.rs  routes.rs  service.rs
imphnen-hackathon/src/submissions/: mod.rs
imphnen-hackathon/src/teams/: mod.rs
imphnen-hackathon/src/users/: mod.rs
imphnen-hackathon/src/v1/: mod.rs
imphnen-hackathon/src/winners/: mod.rs  routes.rs
imphnen-iam/: Cargo.toml
imphnen-iam/src/: lib.rs  permission_macros.rs  permissions_guard.rs
imphnen-iam/src/auth/: mod.rs
imphnen-iam/src/permissions/: mod.rs
imphnen-iam/src/roles/: mod.rs
imphnen-iam/src/users/: mod.rs
imphnen-iam/src/v1/: mod.rs
imphnen-libs/: Cargo.toml
imphnen-libs/src/: dual_mode_repository.rs  lib.rs  minio.rs  postgres.rs  services.rs
imphnen-libs/src/argon/: mod.rs
imphnen-libs/src/axum/: app_state.rs  mod.rs  validated_json.rs  zod_validate.rs
imphnen-libs/src/enviroment/: mod.rs
imphnen-libs/src/environment/: mod.rs
imphnen-libs/src/jsonwebtoken/: mod.rs
imphnen-libs/src/lettre/: mod.rs
imphnen-libs/src/postgres/: connection.rs  examples.rs  helpers.rs  mod.rs
imphnen-libs/src/services/: auth_repository.rs  dto.rs  error.rs  mod.rs  user_lookup.rs
imphnen-libs/src/surrealdb/: mod.rs  resource.rs
imphnen-middleware/: Cargo.toml
imphnen-middleware/src/: lib.rs
imphnen-middleware/src/audit_logging_middleware/: mod.rs
imphnen-middleware/src/auth_middleware/: mod.rs
imphnen-middleware/src/cors_middleware/: mod.rs
imphnen-middleware/src/payment_middleware/: mod.rs
imphnen-middleware/src/permissions_middleware/: mod.rs
imphnen-middleware/src/rate_limiting_middleware/: mod.rs
imphnen-middleware/src/security_headers_middleware/: mod.rs
imphnen-middleware/src/timeline_enforcement_middleware/: mod.rs
imphnen-qr/: Cargo.toml
imphnen-qr/src/: config.rs  lib.rs
imphnen-qr/src/campaigns/: mod.rs
imphnen-qr/src/common/: mod.rs  qr_jwt.rs
imphnen-qr/src/middleware/: mod.rs  qr_auth.rs
imphnen-qr/src/users/: mod.rs
imphnen-storage/: Cargo.toml
imphnen-storage/src/: config.rs  helpers.rs  lib.rs  service.rs  signing.rs  types.rs
imphnen-utils/: Cargo.toml
imphnen-utils/src/: bind_filter.rs  crud.rs  csrf_token.rs  errors.rs  extract_email.rs  extract_ip.rs  generate_date.rs  generate_otp.rs  get_id.rs  lib.rs  logger.rs  make_thing.rs  migration_validation_errors.rs  mock_test.rs  pagination.rs  query_builder.rs  query_list.rs  response_format.rs  sanitization.rs  serde_helpers.rs  surrealdb_helpers.rs  validator.rs
tests/: Cargo.toml
tests/cms/: test-cms.sh
tests/common/: test-common.sh
tests/dimentorin/: test-mentors-postgres.sh  test-mentors.sh
tests/examples/: test-with-validation.sh
tests/gacha/: test-gacha.sh
tests/hackathon/: test-hackathon.sh  test-notifications.sh  test-registrations.sh
tests/iam/: test-auth.sh  test-roles-permissions.sh  test-security.sh  test-teams.sh  test-users.sh
tests/src/: lib.rs  mock_test.rs  postgres_integration_test.rs  rate_limiting_middleware_test.rs  security_headers_middleware_test.rs  validation_comprehensive_test.rs
tests/src/common/: mod.rs  response_helpers.rs
tests/src/dimentorin/: mod.rs
tests/src/gacha/: gacha_claims_controller_test.rs  gacha_claims_repository_test.rs  gacha_claims_service_test.rs  gacha_credits_comprehensive_test.rs  gacha_credits_controller_test.rs  gacha_credits_repository_test.rs  gacha_credits_service_test.rs  gacha_items_controller_test.rs  gacha_items_repository_test.rs  gacha_items_service_test.rs  gacha_rolls_controller_test.rs  gacha_rolls_repository_test.rs  gacha_rolls_service_test.rs
tests/src/hackathon/: hackathon_controller_test.rs  hackathon_minimal_test.rs  hackathon_repository_test.rs  hackathon_service_test.rs  mod.rs  timeline_enforcement_test.rs
tests/src/iam/: mod.rs
(+565 files in other folders)
