[workspace]
resolver = "2"
members = [ 
  "tests",
  "imphnen-iam",
  "imphnen-cms",
  "imphnen-libs",
  "imphnen-utils",
  "imphnen-gacha",
  "imphnen-gateway",
  "imphnen-backend",
  "imphnen-entities",
  "imphnen-dimentorin",
  "imphnen-middleware",
]


[workspace.dependencies]
axum = { version = "0.8.4", features = ["multipart"] }
log = "0.4.25"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.45.0" }
argon2 = { version = "0.5.3", features = ["password-hash"] }
jsonwebtoken = "9.3.1"
chrono = "0.4.41"
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
lettre = { version = "0.11.16", features = ["tokio1-native-tls"] }
surrealdb = { version = "2.3.2", features = ["kv-mem"] }
thiserror = "2.0.12"
anyhow = "1.0.98"
rand = { version = "0.9.1", features = ["std", "alloc"] }
rand_distr = "0.5.1"
tower-http = { version = "0.6.4", features = ["cors"] }
validator = { version = "0.12", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1.11.1"
axum-test = "17.2.0"
fancy-regex = "0.14.0"
futures = "0.3.31"
tower = "0.5.2"
env_logger = "0.11.8"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = "z"
