[workspace]
resolver = "2"
members = [ 
  "tests",
  "imphnen-iam",
  "imphnen-cms",
  "imphnen-libs",
  "imphnen-utils",
  "imphnen-gacha",
  "imphnen-gateway",
  "imphnen-backend",
  "imphnen-entities",
  "imphnen-dimentorin",
  "imphnen-middleware",
]


[workspace.dependencies]
oauth2 = "4.4.2"
reqwest = { version = "0.11.24", features = ["json"] }
serde_json = "1.0.111"
axum = { version = "0.8.4", features = ["multipart"] }
log = "0.4.25"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.45.0", features = ["full"] }
argon2 = { version = "0.5.3", features = ["password-hash"] }
jsonwebtoken = "9.3.1"
chrono = "0.4.41"
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
lettre = { version = "0.11.16", features = ["tokio1-native-tls"] }
surrealdb = { version = "2.3.7", features = ["kv-mem", "kv-fdb"] }
thiserror = "2.0.12"
anyhow = "1.0.98"
rand = { version = "0.9.1", features = ["std", "alloc"] }
rand_distr = "0.5.1"
tower-http = { version = "0.6.4", features = ["cors", "trace"] }
http-body-util = "0.1.1"

validator = { version = "0.20.0", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1.11.1"
axum-test = "17.2.0"
fancy-regex = "0.15.0"
futures = "0.3.31"
tower = "0.5.2"
env_logger = "0.11.8"
tracing = "0.1.40"
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "serde"] }
strum = { version = "0.27.1", features = ["derive"] }
strum_macros = "0.27.1"
hyper = "1.6.0"
hyper-util = "0.1.0"

async-trait = "0.1.77"
tokio-test = "0.4.3"
mockall = "0.12.1"
once_cell = "1.19.0"
dotenvy = "0.15.7"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tokio-tungstenite = "0.23"
url = "2.5"
futures-util = "0.3"

tests = { path = "./tests" }
imphnen-iam = { path = "./imphnen-iam" }
imphnen-cms = { path = "./imphnen-cms" }
imphnen-libs = { path = "./imphnen-libs" }
imphnen-utils = { path = "./imphnen-utils" }
imphnen-gacha = { path = "./imphnen-gacha" }
imphnen-gateway = { path = "./imphnen-gateway" }
imphnen-backend = { path = "./imphnen-backend" }
imphnen-entities = { path = "./imphnen-entities" }
imphnen-dimentorin = { path = "./imphnen-dimentorin" }
imphnen-middleware = { path = "./imphnen-middleware" }

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = "z"
