[package]
name = "imphnen-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api"
path = "src/main.rs"

[[bin]]
name = "create_schema"
path = "src/bin/create_schema.rs"

[[bin]]
name = "seeder"
path = "src/bin/seeder.rs"

[[bin]]
name = "seed_events"
path = "src/bin/seed_events.rs"

[[bin]]
name = "seed_gacha_rolls"
path = "src/bin/seed_gacha_rolls.rs"

[[bin]]
name = "seed_mentor_user"
path = "src/bin/seed_mentor_user.rs"

[[bin]]
name = "seed_permissions"
path = "src/bin/seed_permissions.rs"

[[bin]]
name = "seed_roles"
path = "src/bin/seed_roles.rs"

[[bin]]
name = "seed_roles_permissions"
path = "src/bin/seed_roles_permissions.rs"

[[bin]]
name = "seed_test_data"
path = "src/bin/seed_test_data.rs"

[[bin]]
name = "test_postgres"
path = "src/bin/test_postgres.rs"

[dependencies]
sea-orm.workspace = true
imphnen-libs.workspace = true
imphnen-utils.workspace = true
imphnen-gateway.workspace = true
imphnen-entities.workspace = true
imphnen-iam.workspace = true
imphnen-cms.workspace = true
imphnen-gacha.workspace = true
imphnen-dimentorin.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
utoipa.workspace = true
lazy_static.workspace = true
regex.workspace = true
validator.workspace = true
axum-test.workspace = true
rand.workspace = true
tokio.workspace = true
chrono.workspace = true
anyhow.workspace = true
tower-http.workspace = true
utoipa-swagger-ui.workspace = true
env_logger.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace=true
