[package]
name = "imphnen-entities"
version = "0.3.0"
edition = "2024"

[dependencies]
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
utoipa.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
sea-orm.workspace = true
strum.workspace = true
imphnen-macros.workspace = true
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-native-tls", "uuid", "chrono", "json"] }
