[package]
name = "imphnen-gateway"
version = "0.2.0"
edition = "2024"

[dependencies]
imphnen-hackathon.workspace = true
imphnen-qr.workspace = true
sqlx.workspace = true
imphnen-iam.workspace = true
imphnen-libs.workspace = true
imphnen-utils.workspace = true
imphnen-gacha.workspace = true
imphnen-entities.workspace = true
imphnen-middleware.workspace = true
imphnen-cms.workspace = true
imphnen-dimentorin.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
utoipa.workspace = true
lazy_static.workspace = true
regex.workspace = true
axum-test.workspace = true
rand.workspace = true
tokio.workspace = true
chrono.workspace = true
anyhow.workspace = true
tower-http.workspace = true
utoipa-swagger-ui.workspace = true
