[package]
name = "imphnen-hackathon"
version = "0.3.0"
edition = "2024"

[dependencies]
imphnen-utils.workspace = true
imphnen-libs.workspace = true
imphnen-storage.workspace = true
axum.workspace = true
sea-orm.workspace = true
sqlx.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
utoipa.workspace = true
chrono.workspace = true
uuid.workspace = true
tokio.workspace = true
reqwest.workspace = true
base64.workspace = true
tracing.workspace = true
thiserror.workspace = true
