[package]
name = "imphnen-libs"
version = "0.1.0"
edition = "2024"

[dependencies]
imphnen-entities.workspace = true
once_cell = { workspace = true }
log.workspace = true
axum.workspace = true
tokio.workspace = true
serde.workspace = true
argon2.workspace = true
lettre.workspace = true
chrono.workspace = true
surrealdb.workspace = true
jsonwebtoken.workspace = true
dotenvy.workspace = true
anyhow.workspace = true
uuid.workspace = true
base64.workspace = true
reqwest = { version = "0.11", features = ["json"] }
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
urlencoding = "2.1"
