[package]
name = "imphnen-libs"
version = "0.1.0"
edition = "2024"

[dependencies]
imphnen-entities.workspace = true
once_cell = { workspace = true }
log.workspace = true
axum.workspace = true
tokio.workspace = true
serde.workspace = true
argon2.workspace = true
lettre.workspace = true
chrono.workspace = true
surrealdb.workspace = true
jsonwebtoken.workspace = true
dotenvy.workspace = true
anyhow.workspace = true
uuid.workspace = true
base64.workspace = true
reqwest.workspace = true
sha2.workspace = true
hmac.workspace = true
hex.workspace = true
urlencoding.workspace = true
