[package]
name = "imphnen-libs"
version = "0.2.0"
edition = "2024"

[dependencies]
imphnen-entities.workspace = true
sea-orm.workspace = true
once_cell = { workspace = true }
log.workspace = true
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
zod-rs.workspace = true
argon2.workspace = true
lettre.workspace = true
chrono.workspace = true
jsonwebtoken.workspace = true
dotenvy.workspace = true
anyhow.workspace = true
uuid.workspace = true
base64.workspace = true
reqwest.workspace = true
sha2.workspace = true
hmac.workspace = true
hex.workspace = true
urlencoding.workspace = true
async-trait.workspace = true
thiserror.workspace = true
env_logger.workspace = true
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
num_cpus = { workspace = true }
