[package]
name = "imphnen-middleware"
version = "0.2.0"
edition = "2024"

[dependencies]
imphnen-libs.workspace = true
imphnen-utils.workspace = true
imphnen-entities.workspace = true
sea-orm.workspace = true
uuid.workspace = true
axum.workspace = true
axum-extra.workspace = true
serde.workspace = true
serde_json.workspace = true
utoipa.workspace = true
lazy_static.workspace = true
regex.workspace = true
axum-test.workspace = true
rand.workspace = true
base64.workspace = true
tokio.workspace = true
chrono.workspace = true
log.workspace = true
anyhow.workspace = true
tower-http.workspace = true
futures.workspace = true
tower.workspace = true
utoipa-swagger-ui.workspace = true
