[package]
name = "imphnen-qr"
version = "0.2.0"
edition = "2024"

[dependencies]
imphnen-utils.workspace = true
imphnen-libs.workspace = true
axum.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
chrono.workspace = true
uuid.workspace = true
sqlx.workspace = true
tracing.workspace = true
utoipa.workspace = true
image.workspace = true
qrcode.workspace = true
