[package]
name = "imphnen-storage"
version = "0.3.0"
edition = "2024"

[dependencies]
imphnen-libs.workspace = true
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
hmac.workspace = true
sha2.workspace = true
uuid.workspace = true
reqwest.workspace = true
hex.workspace = true
urlencoding.workspace = true
tracing.workspace = true
