[package]
name = "imphnen-utils"
version = "0.1.0"
edition = "2024"

[dependencies]
imphnen-libs.workspace = true
imphnen-entities.workspace = true
axum.workspace = true
chrono.workspace = true
rand.workspace = true
anyhow.workspace = true
axum-test.workspace = true
serde.workspace = true
serde_json.workspace = true
validator.workspace = true
strum.workspace = true
strum_macros.workspace = true
uuid.workspace = true
tracing.workspace = true
base64.workspace = true
sha2.workspace = true
reqwest.workspace = true
regex = "1.12"
dotenvy = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
sea-orm.workspace = true
