[package]
name = "tests"
version = "0.1.0"
edition = "2024"

[dependencies]
imphnen-libs = { version = "0.1.0", path = "../imphnen-libs" }
imphnen-utils = { version = "0.1.0", path = "../imphnen-utils" }
imphnen-entities = { version = "0.1.0", path = "../imphnen-entities" }
imphnen-iam-service = { version = "0.1.0", path = "../imphnen-iam-service" }
axum.workspace = true
axum-test.workspace = true
chrono.workspace = true
surrealdb.workspace = true
tokio.workspace = true
serde_json.workspace = true
